Title: Code Refactoring and Test Configuration Updates
Description:
1. Improved code readability in various files by reformatting the code.
2. Updated the test configuration in `application.yaml` and `application.properties` files.
3. Fixed URL paths in `CloudVendorController.java`.
4. Updated return messages in `CloudVendorServiceImpl.java`.
5. Added a new method `getByVendorName` in `CloudVendorService`.
6. Updated tests in `CloudVendorServiceImplTest.java` and `CloudVendorRepositoryTest.java` for better clarity.